--- a/lang/ru_RU.po
+++ b/lang/ru_RU.po
@@ -1,10 +1,10 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: ajax_login_register\n"
+"Project-Id-Version: zM Ajax Login & Register\n"
 "POT-Creation-Date: 2014-03-15 16:48+0400\n"
 "PO-Revision-Date: 2014-03-15 16:48+0400\n"
 "Last-Translator: Artem Belov <artbelov@live.ru>\n"
-"Language-Team: \n"
+"Language-Team: Artem Belov <artbelov@live.ru>\n"
 "Language: ru_RU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
