--- a/lang/ru_RU.po
+++ b/lang/ru_RU.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: zM Ajax Login & Register\n"
-"POT-Creation-Date: 2014-03-15 16:48+0400\n"
-"PO-Revision-Date: 2014-03-15 16:48+0400\n"
+"POT-Creation-Date: 2014-03-15 18:10+0400\n"
+"PO-Revision-Date: 2014-03-15 18:10+0400\n"
 "Last-Translator: Artem Belov <artbelov@live.ru>\n"
 "Language-Team: Artem Belov <artbelov@live.ru>\n"
 "Language: ru_RU\n"
@@ -11,8 +11,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.6.4\n"
 "X-Poedit-Basepath: ..\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-SearchPath-0: .\n"
 
@@ -99,7 +98,7 @@ msgstr "Выйти"
 
 #: controllers/admin.php:56 controllers/admin.php:57
 msgid "Ajax Login &amp; Register"
-msgstr "Ajax авторизация и регистрация"
+msgstr "AJAX авторизация и регистрация"
 
 #: views/login-dialog.php:8
 msgid "Login"
