Added translator name

--- a/languages/ajax_login_register-pt_BR.po
+++ b/languages/ajax_login_register-pt_BR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: zM AJAX Login & Register\n"
 "POT-Creation-Date: 2014-07-05 12:09-0500\n"
 "PO-Revision-Date: \n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: Marcio Duarte <info@pagelab.com.br>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
