--- a/languages/ajax_login_register.pot
+++ b/languages/ajax_login_register.pot
@@ -1,17 +1,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: zM AJAX Login & Register\n"
-"POT-Creation-Date: 2014-08-22 10:25-0500\n"
+"POT-Creation-Date: 2014-08-22 10:50-0500\n"
 "PO-Revision-Date: \n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: \n"
-"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.6.5\n"
-"X-Poedit-KeywordsList: __;_e\n"
+"X-Poedit-KeywordsList: __;_e;_n;_x;_ex;_nx;esc_attr__;esc_attr_e;esc_attr_x;"
+"esc_html__;esc_html_e;esc_html_x;_n_noop;_nx_noop;translate_nooped_plural\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-SearchPath-0: .\n"
@@ -120,6 +120,14 @@ msgstr ""
 msgid "AJAX Login &amp; Register"
 msgstr ""
 
+#: controllers/admin.php:102 views/settings.php:21
+msgid "General Settings"
+msgstr ""
+
+#: controllers/admin.php:103
+msgid "Pro Version"
+msgstr ""
+
 #: controllers/admin.php:118
 msgid ""
 "Thanks for installing zM AJAX Login & Register, be sure to check out the "
@@ -211,10 +219,6 @@ msgid ""
 "em></p>"
 msgstr ""
 
-#: views/settings.php:21
-msgid "General Settings"
-msgstr ""
-
 #: views/settings.php:34
 msgid "Facebook Settings"
 msgstr ""
@@ -253,5 +257,5 @@ msgid "Remove this ad, upgrade to Pro"
 msgstr ""
 
 #: views/settings.php:78
-msgid "Upgrade to Login &amp; Register Pro &raquo;"
+msgid "Upgrade to Login &amp; Register Pro"
 msgstr ""
