--- a/languages/ajax_login_register-pt_BR.po
+++ b/languages/ajax_login_register-pt_BR.po
@@ -1,19 +1,19 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: zM AJAX Login & Register\n"
-"POT-Creation-Date: 2014-07-05 12:09-0500\n"
+"POT-Creation-Date: 2014-11-13 10:46-0500\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Marcio Duarte <info@pagelab.com.br>\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: \n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.5.5\n"
+"X-Generator: Poedit 1.6.5\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"Language: pt_BR\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: controllers/abstract.php:51
@@ -112,6 +112,11 @@ msgstr ""
 msgid "Invalid username"
 msgstr "Nome de usuário inválido"
 
+#: controllers/abstract.php:240
+#, fuzzy
+msgid "Invalid"
+msgstr "Email inválido"
+
 #: controllers/abstract.php:245
 msgid "Passwords do not match."
 msgstr "As senhas não conferem."
@@ -124,15 +129,25 @@ msgstr "Email inválido"
 msgid "Success! One moment while we log you in..."
 msgstr "Sucesso! Um momento enquanto fazemos os seu login..."
 
-#: controllers/admin.php:57 controllers/admin.php:58
+#: controllers/admin.php:65 controllers/admin.php:66
 msgid "AJAX Login &amp; Register"
 msgstr "Login AJAX &amp; Registrar"
+
+#: controllers/admin.php:118
+msgid ""
+"Thanks for installing zM AJAX Login & Register, be sure to check out the "
+"features in the"
+msgstr ""
 
 #: plugin.php:83 views/login-form.php:11 views/register-form.php:13
 msgid "Logout"
 msgstr "Sair"
 
-#: views/login-dialog.php:8
+#: plugin.php:84
+msgid "Close"
+msgstr ""
+
+#: views/login-dialog.php:8 views/login-form.php:38
 msgid "Login"
 msgstr "Entrar"
 
@@ -192,11 +207,11 @@ msgstr "O registro está fechado no momento."
 msgid "AJAX Login &amp; Register Settings"
 msgstr "Login AJAX &amp; Configurações do registro"
 
-#: views/settings.php:16
+#: views/settings.php:17
 msgid "Usage"
 msgstr "Utilização"
 
-#: views/settings.php:17
+#: views/settings.php:18
 msgid ""
 "<p>To create a login page using shortcode; add the following shortcode "
 "<code>ajax_login</code> for the login page or <code>ajax_register</code> for "
@@ -220,33 +235,34 @@ msgstr ""
 "em></p><p><em>Note também que o seu site precisará estar aberto para "
 "registro.</em></p>"
 
-#: views/settings.php:20
+#: views/settings.php:21
 msgid "General Settings"
 msgstr "Configurações gerais"
 
-#: views/settings.php:33
+#: views/settings.php:34
 msgid "Facebook Settings"
 msgstr "Configurações do Facebook"
 
-#: views/settings.php:35
+#: views/settings.php:36
+#, fuzzy
 msgid ""
 "<p>Once you have created your Facebook App, go to your Facebook Developer "
 "App Settings and add your site URL(s) to the App Domains field. Then, copy "
 "your App ID and paste into your App ID field in the zM AJAX Login & Register "
 "Facebook settings.</p><p>In order to use Facebook login you will need to "
 "Create a Facebook App, by visiting <a href=\"https://developers.facebook.com/"
-"\">Facebook Developers</a>. Once you have created your Facebook App you are "
-"now ready to enter your \"site URL\" as seen in Facebook Developer App "
-"Settings and your App ID.</p><p>For detailed instructions visit the <a href="
-"\"http://support.zanematthew.com/how-to/zm-ajax-login-register/adding-"
-"facebook-settings/\" target=\"_blank\">How To add Facebook Settings to AJAX "
-"Login &amp; Register</a>, feel free to contact us via our <a href=\"http://"
-"support.zanematthew.com/forum/zm-ajax-login-register/\">Support Forum</a> if "
-"you need additional help.</p>"
+"\" target=\"_blank\">Facebook Developers</a>. Once you have created your "
+"Facebook App you are now ready to enter your \"site URL\" as seen in "
+"Facebook Developer App Settings and your App ID.</p><p>For detailed "
+"instructions visit the <a href=\"http://zanematthew.com/ajax-login-register-"
+"help-videos/\" target=\"_blank\">How To add Facebook Settings to AJAX Login "
+"&amp; Register</a>, feel free to contact us via our <a href=\"http://support."
+"zanematthew.com/forum/zm-ajax-login-register/\" target=\"_blank\">Support "
+"Forum</a> if you need additional help.</p>"
 msgstr ""
 "<p>Uma vez que você criar o seu aplicativo do Facebook, vá até as "
-"configurações do desenvolvedor de aplicativos do Facebook e adicione a(s) sua"
-"(s) URL(s) ao campo Domínios do Aplicativo. Em seguida, copie o seu ID de "
+"configurações do desenvolvedor de aplicativos do Facebook e adicione a(s) "
+"sua(s) URL(s) ao campo Domínios do Aplicativo. Em seguida, copie o seu ID de "
 "aplicativo e cole-o no campo ID do Aplicativo nas configurações do Facebook "
 "do zM Login e Registro AJAX.</p><p>Para utilizar o login do Facebook você "
 "precisa criar um aplicativo do Facebook visitando a página de <a href="
@@ -261,6 +277,23 @@ msgstr ""
 "href=\"http://support.zanematthew.com/forum/zm-ajax-login-register/\">Forum "
 "de suporte</a> se você necessitar de ajuda adicional.</p>"
 
-#: views/settings.php:47
+#: views/settings.php:48
 msgid "Advanced Usage"
 msgstr "Utiilzação avançada"
+
+#: views/settings.php:76
+msgid "Upgrade to the Pro version"
+msgstr ""
+
+#: views/settings.php:77
+msgid "Remove these ads?"
+msgstr ""
+
+#: views/settings.php:78
+msgid "Remove this ad, upgrade to Pro"
+msgstr ""
+
+#: views/settings.php:78
+#, fuzzy
+msgid "Upgrade to Login &amp; Register Pro"
+msgstr "Login AJAX &amp; Registrar"
